/*
 * Copyright 2022 Compose Academy
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package academy.compose.music

object Tags {
    const val TAG_SEARCH_BAR = "TAG_SEARCH_BAR"
    const val TAG_SEARCH_RESULTS = "TAG_SEARCH_RESULTS"
    const val TAG_TRACK_TITLE = "TAG_TRACK_TITLE"
    const val TAG_TRACK_ARTIST = "TAG_TRACK_ARTIST"
    const val TAG_TRACK = "TAG_TRACK_"
    const val TAG_FEATURED_TRACKS = "TAG_FEATURED_TRACKS"
    const val TAG_RECENT_TRACKS = "TAG_RECENT_TRACKS"
    const val TAG_NEW_TRACKS = "TAG_NEW_TRACKS"
    const val TAG_SEEK_BAR = "TAG_SEEK_BAR"
    const val TAG_PLAY_PAUSE = "TAG_PLAY_PAUSE"
    const val TAG_PLAYER_BAR = "TAG_PLAYER_BAR"
    const val TAG_PLAYER = "TAG_PLAYER"
    const val TAG_DASHBOARD = "TAG_DASHBOARD"
    const val TAG_TRACKS_DASHBOARD = "TAG_TRACKS_DASHBOARD"
    const val TAG_DISMISS_PLAYER = "TAG_DISMISS_PLAYER"
}