<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 Compose Academy
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~      http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Music</string>
    <string name="message_search_results">No results to display</string>
    <string name="hint_search">Search for a track, artist or album…</string>

    <string name="heading_featured">Featured Tracks</string>
    <string name="heading_recently_played">Recently Played</string>
    <string name="heading_new">New Tracks</string>

    <string name="cd_search">Search</string>
    <string name="cd_clear_query">Clear query</string>
    <string name="cd_fast_forward">Fast Forward</string>
    <string name="cd_rewind">Rewind</string>
    <string name="cd_play">Play</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_close_now_playing">Minimise player</string>

    <string name="action_show_player">Show Player</string>
    <string name="action_select_track">Play %s</string>

    <string name="cd_play_track">Play %s, by %s</string>
</resources>